--- a/app/src/main/res/layout/activity_update_listing.xml
+++ b/app/src/main/res/layout/activity_update_listing.xml
@@ -1,10 +1,238 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<layout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.updatelisting.UpdateListingActivity">
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <data>
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".ui.addlisting.AddListingActivity"
+            android:backgroundTint="@color/ltblue" >
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/header_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                android:background="@color/white"
+                android:elevation="6dp">
+
+            <TextView
+                    android:id="@+id/header_logo"
+                    android:layout_width="150dp"
+                    android:layout_height="60dp"
+                    android:text="ToySwap"
+                    android:textColor="@color/blue"
+                    android:textAlignment="center"
+                    android:gravity="center"
+                    android:fontFamily="@font/samosa"
+                    android:textSize="28dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginStart="12dp"/>
+
+            <TextView
+                    android:id="@+id/user_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/blue"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginEnd="30dp"
+                    android:fontFamily="@font/inter"
+                    android:textSize="16sp"
+                    android:text="Hello, skettle1!"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@id/header_container"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:paddingTop="20dp"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
+                android:layout_margin="15dp"
+                android:background="@color/white"
+                android:elevation="5dp">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="60dp">
+
+                <ImageView
+                        android:id="@+id/user_image"
+                        android:layout_width="200dp"
+                        android:layout_height="250dp"
+                        android:src="@drawable/img_placeholder"
+                        android:scaleType="centerCrop"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                <Button
+                        android:id="@+id/take_image_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/user_image"
+
+                        android:layout_marginTop="15dp"
+                        android:layout_marginStart="65dp"
+                        android:text="Capture"
+                        android:fontFamily="@font/inter"
+                        android:backgroundTint="@color/blue"/>
+
+                <Button
+                        android:id="@+id/gallery_image_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/user_image"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginEnd="65dp"
+                        android:text="Gallery"
+
+                        android:fontFamily="@font/inter"
+                        android:backgroundTint="@color/blue"/>
+
+                <TextView
+                        android:id="@+id/item_details_header_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toBottomOf="@id/take_image_button"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginTop="25dp"
+                        android:layout_marginStart="10dp"
+                        android:text="Item details"
+                        android:fontFamily="@font/patua_one"
+                        android:textSize="25dp"
+                        android:textColor="@color/grey" />
+
+                <EditText
+                        android:id="@+id/item_title_input"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toBottomOf="@+id/item_details_header_text"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginTop="10dp"
+                        android:textSize="14dp"
+                        android:hint="Item name"
+                        android:fontFamily="@font/inter" />
+
+                <EditText
+                        android:id="@+id/item_description_input"
+                        android:inputType="textMultiLine"
+                        android:gravity="top"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toBottomOf="@id/item_title_input"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginTop="5dp"
+                        android:textSize="14dp"
+                        android:hint="Item description"
+                        android:fontFamily="@font/inter" />
+
+                <TextView
+                        android:id="@+id/condition_spinner_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toBottomOf="@id/item_description_input"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginTop="19dp"
+                        android:layout_marginStart="10dp"
+                        android:text="Condition"
+                        android:textSize="19dp"
+                        android:fontFamily="@font/patua_one" />
+
+
+                <Spinner
+                        android:id="@+id/condition_spinner"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toBottomOf="@id/item_description_input"
+                        app:layout_constraintStart_toEndOf="@id/condition_spinner_label"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="15dp"
+                        android:padding="5dp"/>
+
+                <TextView
+                        android:id="@+id/category_spinner_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toBottomOf="@id/condition_spinner_label"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginTop="17dp"
+                        android:layout_marginStart="10dp"
+                        android:text="Category"
+                        android:textSize="19dp"
+                        android:fontFamily="@font/patua_one" />
+
+
+                <Spinner
+                        android:id="@+id/category_spinner"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toBottomOf="@id/condition_spinner"
+                        app:layout_constraintStart_toEndOf="@id/category_spinner_label"
+                        android:layout_marginStart="13dp"
+                        android:layout_marginTop="10dp"
+                        android:padding="5dp"/>
+
+                <Button
+                        android:id="@+id/add_listing_button"
+                        android:layout_width="140dp"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="@color/blue"
+                        android:text="Update Listing"
+                        android:fontFamily="@font/inter"
+                        app:layout_constraintTop_toBottomOf="@id/category_spinner"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginTop="30dp"/>
+
+                <Button
+                        android:id="@+id/cancel_button"
+                        android:layout_width="140dp"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="@color/pink"
+                        android:text="Cancel"
+                        android:fontFamily="@font/inter"
+                        app:layout_constraintTop_toBottomOf="@id/add_listing_button"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginTop="10dp"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </ScrollView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
+
+
+<!--<androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--        xmlns:tools="http://schemas.android.com/tools"-->
+<!--        xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        tools:context=".ui.updatelisting.UpdateListingActivity">-->
+
+<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
