--- a/app/src/main/res/layout/activity_view_listing.xml
+++ b/app/src/main/res/layout/activity_view_listing.xml
@@ -6,8 +6,8 @@
         xmlns:map="http://schemas.android.com/apk/res-auto">
 
     <data>
-        <variable 
-                name="listing" 
+        <variable
+                name="listing"
                 type="com.springsamurais.toyswap.model.Listing"/>
         <variable
                 name="member"
@@ -46,7 +46,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    android:layout_marginStart="12dp" />
+                    android:layout_marginStart="12dp"/>
 
             <Button
                     android:id="@+id/login_button"
@@ -90,7 +90,7 @@
                         android:background="@drawable/rounded_green"
                         android:textColor="@color/white"
                         android:textSize="16dp"
-                        android:text="@{listing.statusListing}" />
+                        android:text="@{listing.statusListing}"/>
 
                 <ImageView
                         android:id="@+id/listing_full_image"
@@ -117,7 +117,7 @@
                         android:textSize="24dp"
                         android:textColor="@color/white"
                         android:padding="8dp"
-                        android:layout_marginTop="20dp" />
+                        android:layout_marginTop="20dp"/>
 
                 <TextView
                         android:id="@+id/listing_full_description"
@@ -129,7 +129,7 @@
                         android:text="@{listing.description}"
                         android:textSize="14dp"
                         android:textAlignment="center"
-                        android:layout_marginTop="20dp" />
+                        android:layout_marginTop="20dp"/>
 
                 <TextView
                         android:id="@+id/listing_full_username"
@@ -141,7 +141,7 @@
                         android:layout_marginEnd="15dp"
                         android:layout_marginTop="8dp"
                         android:fontFamily="@font/patua_one"
-                        android:textSize="16dp" />
+                        android:textSize="16dp"/>
 
                 <TextView
                         android:id="@+id/listing_full_location_text"
@@ -153,18 +153,18 @@
                         android:layout_marginStart="15dp"
                         android:layout_marginTop="20dp"
                         android:fontFamily="@font/patua_one"
-                        android:textSize="16dp" />
+                        android:textSize="16dp"/>
 
                 <androidx.fragment.app.FragmentContainerView
-                          android:id="@+id/map_container"
-                          app:layout_constraintTop_toBottomOf="@id/listing_full_location_text"
-                          app:layout_constraintStart_toStartOf="parent"
-                          app:layout_constraintEnd_toEndOf="parent"
-                          android:layout_marginEnd="15dp"
-                          android:layout_marginStart="15dp"
-                          android:layout_marginTop="10dp"
-                          android:layout_width="match_parent"
-                          android:layout_height="200dp"/>
+                        android:id="@+id/map_container"
+                        app:layout_constraintTop_toBottomOf="@id/listing_full_location_text"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginEnd="15dp"
+                        android:layout_marginStart="15dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"/>
 
                 <TextView
                         android:id="@+id/listing_full_condition_label"
@@ -176,7 +176,7 @@
                         android:layout_marginTop="20dp"
                         android:text="Condition"
                         android:fontFamily="@font/patua_one"
-                        android:textSize="16dp" />
+                        android:textSize="16dp"/>
 
                 <TextView
                         android:id="@+id/listing_full_condition"
@@ -187,7 +187,7 @@
                         android:layout_marginTop="20dp"
                         android:text=""
                         android:fontFamily="@font/inter"
-                        android:textSize="14dp" />
+                        android:textSize="14dp"/>
 
                 <TextView
                         android:id="@+id/listing_full_date_label"
@@ -199,7 +199,7 @@
                         android:layout_marginTop="10dp"
                         android:text="Date posted"
                         android:fontFamily="@font/patua_one"
-                        android:textSize="16dp" />
+                        android:textSize="16dp"/>
 
                 <TextView
                         android:id="@+id/listing_full_date"
@@ -211,7 +211,7 @@
                         android:layout_marginTop="10dp"
                         android:text=""
                         android:fontFamily="@font/inter"
-                        android:textSize="14dp" />
+                        android:textSize="14dp"/>
 
                 <TextView
                         android:id="@+id/comment_label"
@@ -219,12 +219,13 @@
                         android:layout_height="wrap_content"
                         app:layout_constraintTop_toBottomOf="@id/listing_full_date_label"
                         app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/add_comment_button"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="60dp"
                         android:text="Comments"
                         android:fontFamily="@font/patua_one"
                         android:textColor="@color/blue"
-                        android:textSize="20sp" />
+                        android:textSize="20sp"/>
 
                 <Button
                         android:id="@+id/add_comment_button"
@@ -232,11 +233,22 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:layout_constraintBottom_toTopOf="@id/listing_recycler_view"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/update_listing_button"
                         android:layout_marginEnd="30dp"
                         android:layout_marginBottom="10dp"
-                        android:text="Add Comment"
-                        android:backgroundTint="@color/blue" />
+                        android:text="Add"
+                        android:backgroundTint="@color/blue"/>
+
+                <Button
+                        android:id="@+id/update_listing_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintBottom_toTopOf="@id/listing_recycler_view"
+                        app:layout_constraintStart_toEndOf="@id/add_comment_button"
+                        android:layout_marginEnd="30dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="Update Listing"
+                        android:backgroundTint="@color/blue"/>
 
                 <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/listing_recycler_view"
