--- a/app/src/main/res/layout/activity_update_listing.xml
+++ b/app/src/main/res/layout/activity_update_listing.xml
@@ -5,14 +5,22 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
+        <variable
+                name="listing"
+                type="com.springsamurais.toyswap.model.Listing"/>
+        <variable
+                name="member"
+                type="com.springsamurais.toyswap.model.Member"/>
+        <variable
+                name="clickHandler"
+                type="com.springsamurais.toyswap.ui.updatelisting.UpdateListingClickHandlers"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.addlisting.AddListingActivity"
-            android:backgroundTint="@color/ltblue" >
+            android:backgroundTint="@color/ltblue">
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/header_container"
@@ -76,12 +84,12 @@
                 <ImageView
                         android:id="@+id/user_image"
                         android:layout_width="200dp"
-                        android:layout_height="250dp"
+                        android:layout_height="200dp"
                         android:src="@drawable/img_placeholder"
-                        android:scaleType="centerCrop"
+                        android:scaleType="fitXY"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"/>
 
                 <Button
                         android:id="@+id/take_image_button"
@@ -89,7 +97,6 @@
                         android:layout_height="wrap_content"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/user_image"
-
                         android:layout_marginTop="15dp"
                         android:layout_marginStart="65dp"
                         android:text="Capture"
@@ -120,7 +127,7 @@
                         android:text="Item details"
                         android:fontFamily="@font/patua_one"
                         android:textSize="25dp"
-                        android:textColor="@color/grey" />
+                        android:textColor="@color/grey"/>
 
                 <EditText
                         android:id="@+id/item_title_input"
@@ -132,7 +139,7 @@
                         android:layout_marginTop="10dp"
                         android:textSize="14dp"
                         android:hint="Item name"
-                        android:fontFamily="@font/inter" />
+                        android:fontFamily="@font/inter"/>
 
                 <EditText
                         android:id="@+id/item_description_input"
@@ -146,19 +153,19 @@
                         android:layout_marginTop="5dp"
                         android:textSize="14dp"
                         android:hint="Item description"
-                        android:fontFamily="@font/inter" />
+                        android:fontFamily="@font/inter"/>
 
                 <TextView
                         android:id="@+id/condition_spinner_label"
-                        android:layout_width="wrap_content"
+                        android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         app:layout_constraintTop_toBottomOf="@id/item_description_input"
                         app:layout_constraintStart_toStartOf="parent"
                         android:layout_marginTop="19dp"
                         android:layout_marginStart="10dp"
                         android:text="Condition"
-                        android:textSize="19dp"
-                        android:fontFamily="@font/patua_one" />
+                        android:textSize="19sp"
+                        android:fontFamily="@font/patua_one"/>
 
 
                 <Spinner
@@ -167,21 +174,21 @@
                         android:layout_height="wrap_content"
                         app:layout_constraintTop_toBottomOf="@id/item_description_input"
                         app:layout_constraintStart_toEndOf="@id/condition_spinner_label"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginTop="15dp"
-                        android:padding="5dp"/>
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="17dp"
+                        android:padding="1dp"/>
 
                 <TextView
                         android:id="@+id/category_spinner_label"
-                        android:layout_width="wrap_content"
+                        android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         app:layout_constraintTop_toBottomOf="@id/condition_spinner_label"
                         app:layout_constraintStart_toStartOf="parent"
                         android:layout_marginTop="17dp"
                         android:layout_marginStart="10dp"
                         android:text="Category"
-                        android:textSize="19dp"
-                        android:fontFamily="@font/patua_one" />
+                        android:textSize="19sp"
+                        android:fontFamily="@font/patua_one"/>
 
 
                 <Spinner
@@ -190,33 +197,40 @@
                         android:layout_height="wrap_content"
                         app:layout_constraintTop_toBottomOf="@id/condition_spinner"
                         app:layout_constraintStart_toEndOf="@id/category_spinner_label"
-                        android:layout_marginStart="13dp"
-                        android:layout_marginTop="10dp"
-                        android:padding="5dp"/>
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="17dp"
+                        android:padding="1dp"/>
 
-                <Button
-                        android:id="@+id/add_listing_button"
-                        android:layout_width="140dp"
+                <LinearLayout
+                        android:id="@+id/updateButtonsSection"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:backgroundTint="@color/blue"
-                        android:text="Update Listing"
-                        android:fontFamily="@font/inter"
-                        app:layout_constraintTop_toBottomOf="@id/category_spinner"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        android:layout_marginTop="30dp"/>
+                        android:orientation="horizontal"
+                        android:layout_marginTop="30dp"
+                        app:layout_constraintTop_toBottomOf="@+id/category_spinner_label">
 
-                <Button
-                        android:id="@+id/cancel_button"
-                        android:layout_width="140dp"
-                        android:layout_height="wrap_content"
-                        android:backgroundTint="@color/pink"
-                        android:text="Cancel"
-                        android:fontFamily="@font/inter"
-                        app:layout_constraintTop_toBottomOf="@id/add_listing_button"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        android:layout_marginTop="10dp"/>
+                    <Button
+                            android:id="@+id/updateListingButton"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:backgroundTint="@color/green"
+                            android:text="Update"
+                            android:fontFamily="@font/inter"
+
+                    />
+
+                    <Button
+                            android:id="@+id/cancel_button"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:backgroundTint="#E91E63"
+                            android:text="Cancel"
+                            android:layout_marginStart="20dp"
+                            android:fontFamily="@font/inter"/>
+
+                </LinearLayout>
+
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -227,12 +241,12 @@
 </layout>
 
 
-<!--<androidx.constraintlayout.widget.ConstraintLayout-->
-<!--        xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--        xmlns:tools="http://schemas.android.com/tools"-->
-<!--        xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        tools:context=".ui.updatelisting.UpdateListingActivity">-->
+        <!--<androidx.constraintlayout.widget.ConstraintLayout-->
+        <!--        xmlns:android="http://schemas.android.com/apk/res/android"-->
+        <!--        xmlns:tools="http://schemas.android.com/tools"-->
+        <!--        xmlns:app="http://schemas.android.com/apk/res-auto"-->
+        <!--        android:layout_width="match_parent"-->
+        <!--        android:layout_height="match_parent"-->
+        <!--        tools:context=".ui.updatelisting.UpdateListingActivity">-->
 
-<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
+        <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
