--- a/app/src/main/res/layout/activity_view_listing.xml
+++ b/app/src/main/res/layout/activity_view_listing.xml
@@ -83,6 +83,7 @@
                         android:id="@+id/status_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:scaleType="fitXY"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         android:padding="10dp"
@@ -94,8 +95,9 @@
 
                 <ImageView
                         android:id="@+id/listing_full_image"
-                        android:layout_width="match_parent"
-                        android:layout_height="300dp"
+                        android:layout_width="200dp"
+                        android:layout_height="200dp"
+
                         app:layout_constraintTop_toBottomOf="@id/status_text"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -251,7 +253,6 @@
 
                     <Button
                             android:id="@+id/update_listing_button"
-                            android:onClick="@{clickHandler::updateListingButtonClicked}"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Update"
